--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <li>
               <a class="" href="#tab-1">
                 <img class="featuresCnameItemImg" src="assets/img/introCname.png" alt="" loading="lazy">
-                <h4 class="paddingTop">LeaCloudCDN</h4>
+                <h4 class="paddingTop">CDN</h4>
               </a>
             </li>
             <!-- <li>
@@ -159,19 +159,19 @@
             <li>
               <a class="" href="#tab-1">
                 <img  src="assets/img/introDns.png" alt="" loading="lazy">
-                <h4 class="paddingTop1">LeaDNS</h4>
+                <h4 class="paddingTop1">DNS</h4>
               </a>
             </li>
             <li>
               <a class="" href="#tab-1">
                 <img src="assets/img/introMonitor.png" alt="" loading="lazy">
-                <h4 id="featuresItemText">遠端辦公</h4>
+                <h4 id="featuresItemText" class="fontBold">遠端辦公</h4>
               </a>
             </li>
             <li>
               <a class="" href="#tab-1">
                 <img src="assets/img/introSafe.png" alt="" loading="lazy">
-                <h4 id="featuresItemText1">安全防護</h4>
+                <h4 id="featuresItemText1" class="fontBold">安全防護</h4>
               </a>
             </li>
           </ul>
@@ -191,10 +191,10 @@
               <div class="gallery-item frameOrange">
                 <div class="gallery-item-container">
                   <div class="gallery-item-content">
-                    <h3>開放/阻擋黑白名單</h3>
-                    <img class="" src="assets/img/services/blockBlackWhiteList_orange.png" loading="lazy">
+                    <h3 id="servicesGalleryItemContentTitle">開放/阻擋黑白名單</h3>
+                    <img src="assets/img/services/blockBlackWhiteList_orange.png" loading="lazy">
                   </div>
-                  <p>
+                  <p id="servicesGalleryItemContentText">
                     您可依據您網站的市場規劃，針對個別域名的訪問管理，「開放」（白名單）或「阻擋」（黑名單）訪問來源的國家地區以及使用者IP位置。
                   </p>
                 </div>
@@ -202,10 +202,10 @@
               <div class="gallery-item framePurple">
                 <div class="gallery-item-container">
                   <div class="gallery-item-content">
-                    <h3>豐富快速路由</h3>
-                    <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+                    <h3 id="servicesGalleryItemContentTitle1">豐富快速路由</h3>
+                    <img src="assets/img/services/fastRoute_purple.png" loading="lazy">
                   </div>
-                  <p>
+                  <p id="servicesGalleryItemContentText1">
                     LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
                   </p>
                 </div>
@@ -213,10 +213,10 @@
               <div class="gallery-item frameBlue">
                 <div class="gallery-item-container">
                   <div class="gallery-item-content">
-                    <h3>域名託管</h3>
-                    <img class="" src="assets/img/services/domainNameHosting_blue.png" loading="lazy">
+                    <h3 id="servicesGalleryItemContentTitle2">域名託管</h3>
+                    <img src="assets/img/services/domainNameHosting_blue.png" loading="lazy">
                   </div>
-                  <p>
+                  <p id="servicesGalleryItemContentText2">
                     LeaCloud CDN提供NS託管加速及CNAME託管加速，介面簡潔明瞭、操作簡便，將您的域名輕鬆託管，維護不再是負擔。
                     依照您的管理規劃，彈性選擇NS託管或CNAME託管，不同託管模式，輕鬆將網站一鍵加速。支援 HTTP/HTTPS、動態WebSocket，並可自訂緩存時間、憑證、狀態碼導轉頁等，依域名需求細節配置。
                   </p>
@@ -225,10 +225,10 @@
               <div class="gallery-item frameOrange">
                 <div class="gallery-item-container">
                   <div class="gallery-item-content">
-                    <h3>自動監控</h3>
-                    <img class="" src="assets/img/services/autoMonitor_orange.png" loading="lazy">
+                    <h3 id="servicesGalleryItemContentTitle3">自動監控</h3>
+                    <img src="assets/img/services/autoMonitor_orange.png" loading="lazy">
                   </div>
-                  <p>
+                  <p id="servicesGalleryItemContentText3">
                     在LeaCloud平台上可監控和查詢期間內您的所有或個別網站域名的CDN使用狀態，包含傳輸流量、頻寬、訪問次數、HTTP狀態數。
                   </p>
                 </div>
@@ -236,10 +236,10 @@
               <div class="gallery-item framePurple">
                 <div class="gallery-item-container">
                   <div class="gallery-item-content">
-                    <h3>Referer防盜鏈功能</h3>
-                    <img class="" src="assets/img/services/Referer_purple.png" loading="lazy">
+                    <h3 id="servicesGalleryItemContentTitle4">Referer防盜鏈功能</h3>
+                    <img src="assets/img/services/Referer_purple.png" loading="lazy">
                   </div>
-                  <p>
+                  <p id="servicesGalleryItemContentText4">
                     透過對訪問來源設置過濾的機制，避免您的網站資源輕易受盜用。設置LeaCloud Referer防盜鏈功能，以防止站台內容透過他人程式鑲嵌，或是獲取鏈結而開啟。
                   </p>
                 </div>
@@ -247,18 +247,18 @@
               <div class="gallery-item frameBlue">
                 <div class="gallery-item-container">
                   <div class="gallery-item-content">
-                    <h3>憑證管理</h3>
-                    <img class="" src="assets/img/services/certificateManagement_blue.png" loading="lazy">
+                    <h3 id="servicesGalleryItemContentTitle5">憑證管理</h3>
+                    <img src="assets/img/services/certificateManagement_blue.png" loading="lazy">
                   </div>
-                  <p>
+                  <p id="servicesGalleryItemContentText5">
                     提供HTTP/HTTPS，讓您的網站傳輸加密可受保護。可在 LeaCloud 平台上傳您的自有憑證。或是透過NS託管，使用系統自動生成SSL憑證，系統產生的SSL憑證會自動展延有效期限。
                   </p>
                 </div>
               </div>
               
               <div class="gallery-controls">
-                <i class="fas fa-arrow-left gallery-controls-previous" id="servicesControlPre"></i>
-                <i class="fas fa-arrow-right gallery-controls-next" id="servicesControlNex"></i>
+                <i class="fas fa-arrow-left gallery-controls-next" id="servicesControlPre"></i>
+                <i class="fas fa-arrow-right gallery-controls-previous" id="servicesControlNex"></i>
               </div>
             </div>
           </div>
@@ -286,12 +286,12 @@
               <div class="gallery">
                 <div class="galleryCooperationContainer">
                   <div class="galleryCooperationItem">
-                    <div class="galleryCooperationTitleItemContent linegradientOrange">
-                      <img src="assets/img/cooperation/number2.png" alt="" loading="lazy">
+                    <div class="galleryCooperationTitleItemContent linegradientBlue">
+                      <img src="assets/img/cooperation/number1.png" alt="" loading="lazy">
                       <h2 class="title">LeaDNS</h5>
                     </div>
                     <div class="galleryCooperationItemContent paddingTopRight">
-                      <i class="fas fa-quote-left fontOrange"></i>
+                      <i class="fas fa-quote-left fontBlue"></i>
                       <p>
                         為LeaCloud提供的域名解析服務。透過 LeaDNS能更易於管理DNS，幫助您識別您的域名名稱和其IP位址判斷，藉此將用戶的訪問路由連結到相應的網站或應用服務。LeaDNS為您搭起 DNS 解析的最便捷的橋樑，達到快速穩定的域名解析體驗。
                       </p>
@@ -299,14 +299,14 @@
                   </div>
                   
                   <div class="galleryCooperationItem">
-                    <div class="galleryCooperationTitleItemContent linegradientBlue">
-                      <img src="assets/img/cooperation/number1.png" alt="" loading="lazy">
-                      <h2 class="title">企業辦公</h5>
+                    <div class="galleryCooperationTitleItemContent linegradientOrange">
+                      <img src="assets/img/cooperation/number2.png" alt="" loading="lazy">
+                      <h2 class="title">資訊安全</h5>
                     </div>
                     <div class="galleryCooperationItemContent paddingTopRight">
-                      <i class="fas fa-quote-left fontBlue"></i>
-                      <p>為企業的行動辦公需求而生。LeaProtect、居家辦公以及LeaDesk，三線三護打造企業辦公最前道防線，保障貼身手機、電腦及伺服器安全隱蔽，打造員工個人化環境，不需擔心企業資料和行動位置洩漏。
-                        還可透過LeaExpress快捷送達您的貨品，降低運送的負擔和風險。
+                      <i class="fas fa-quote-left fontOrange"></i>
+                      <p>
+                        為保障您的辦公室環境及設備安全，不論是事前預防或事後調查，我們提供專業的檢測調查與顧問服務。LeaSecurity 團隊擁有市場資深的實務經驗，為您提供惡意程式檢測服務、事故調查、滲透測試服務、紅隊演練服務及弱點掃描服務，保障企業的資訊安全。
                       </p>
                     </div>
                   </div>
@@ -314,12 +314,12 @@
                   <div class="galleryCooperationItem">
                     <div class="galleryCooperationTitleItemContent linegradientPink">
                       <img src="assets/img/cooperation/number3.png" alt="" loading="lazy">
-                      <h2 class="title">資訊安全</h5>
+                      <h2 class="title">企業辦公</h5>
                     </div>
                     <div class="galleryCooperationItemContent paddingTopRight">
                       <i class="fas fa-quote-left fontPink"></i>
-                      <p>
-                        為保障您的辦公室環境及設備安全，不論是事前預防或事後調查，我們提供專業的檢測調查與顧問服務。LeaSecurity 團隊擁有市場資深的實務經驗，為您提供惡意程式檢測服務、事故調查、滲透測試服務、紅隊演練服務及弱點掃描服務，保障企業的資訊安全。
+                      <p>為企業的行動辦公需求而生。LeaProtect、居家辦公以及LeaDesk，三線三護打造企業辦公最前道防線，保障貼身手機、電腦及伺服器安全隱蔽，打造員工個人化環境，不需擔心企業資料和行動位置洩漏。
+                        還可透過LeaExpress快捷送達您的貨品，降低運送的負擔和風險。
                       </p>
                     </div>
                   </div>
@@ -350,8 +350,8 @@
                     </div>
                   </div> -->
                   <div class="galleryCooperationControls">
-                    <i class="fas fa-arrow-left gallery-controls-previous" id="cooperationControlPre"></i>
-                    <i class="fas fa-arrow-right gallery-controls-next" id="cooperationControlNex"></i>
+                    <i class="fas fa-arrow-left gallery-controls-next" id="cooperationControlPre"></i>
+                    <i class="fas fa-arrow-right gallery-controls-previous" id="cooperationControlNex"></i>
                   </div>
                 </div>
               </div>
@@ -559,7 +559,7 @@
             <h4>幫助中心</h4>
             <div class="a-Interval"><a href="#">聯繫客服</a></div>
             <div class="a-Interval"><a href="#signup">創建帳戶</a></div>
-            <div class="a-Interval"><a href="#">常見問題</a></div>
+            <!-- <div class="a-Interval"><a href="#">常見問題</a></div> -->
           </div>
 
           <div class="col-lg-2 col-md-12 interval">
@@ -567,7 +567,7 @@
             <h4>網站資訊</h4>
             <div class="a-Interval"><a href="#">隱私權政策</a></div>
             <div class="a-Interval"><a href="#">Cookie政策</a></div>
-            <div class="a-Interval"><a href="#">網站地圖</a></div>
+            <!-- <div class="a-Interval"><a href="#">網站地圖</a></div> -->
           </div>
 
           <div class="col-lg-2 col-md-12 interval">
