--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
             <div class="cooperationSectionTitleContainer">
               <div class="cooperationSectionContent">
                 <div class="sectionTitle">LEACLOUD</div>
-                <h1 class="sectionSubTitle">LeaCloud還提供哪些服務？</h1>
+                <h1 class="sectionSubTitle" id="cooperationSectionSubTitle">LeaCloud還提供哪些服務？</h1>
                 <hr>
-                <div class="cooperationIntro">
-                  有鑑於資訊的快速推陳出新，<br>LeaCloud建立起強大的團隊，<br>提供專業貼心的服務項目，<br>無論整體企業，小型部門或個人辦公室，<br>您都可在這享有一站式的資訊服務。
+                <div class="cooperationIntro" id="cooperationIntro">
+                  &emsp;&emsp;有鑑於資訊的快速推陳出新，LeaCloud建立起強大的團隊，提供專業貼心的服務項目，無論整體企業，小型部門或個人辦公室，您都可在這享有一站式的資訊服務。
                 </div>
               </div>
             </div>
@@ -288,12 +288,12 @@
                   <div class="galleryCooperationItem">
                     <div class="galleryCooperationTitleItemContent linegradientBlue">
                       <img src="assets/img/cooperation/number1.png" alt="" loading="lazy">
-                      <h2 class="title">LeaDNS</h5>
+                      <h2 class="title" id="cooperationGalleryItemTitle">LeaDNS 域名解析</h5>
                     </div>
                     <div class="galleryCooperationItemContent paddingTopRight">
                       <i class="fas fa-quote-left fontBlue"></i>
-                      <p>
-                        為LeaCloud提供的域名解析服務。透過 LeaDNS能更易於管理DNS，幫助您識別您的域名名稱和其IP位址判斷，藉此將用戶的訪問路由連結到相應的網站或應用服務。LeaDNS為您搭起 DNS 解析的最便捷的橋樑，達到快速穩定的域名解析體驗。
+                      <p id="cooperationGalleryItemText">
+                        為LeaCloud提供的域名解析服務。透過LeaDNS能更易於管理DNS，幫助您識別您的域名名稱和其IP位址判斷，藉此將用戶的訪問路由連結到相應的網站或應用服務。LeaDNS為您搭起DNS解析的最便捷的橋樑，達到快速穩定的域名解析體驗。
                       </p>
                     </div>
                   </div>
@@ -301,12 +301,12 @@
                   <div class="galleryCooperationItem">
                     <div class="galleryCooperationTitleItemContent linegradientOrange">
                       <img src="assets/img/cooperation/number2.png" alt="" loading="lazy">
-                      <h2 class="title">資訊安全</h5>
+                      <h2 class="title" id="cooperationGalleryItemTitle1">資訊安全服務</h5>
                     </div>
                     <div class="galleryCooperationItemContent paddingTopRight">
                       <i class="fas fa-quote-left fontOrange"></i>
-                      <p>
-                        為保障您的辦公室環境及設備安全，不論是事前預防或事後調查，我們提供專業的檢測調查與顧問服務。LeaSecurity 團隊擁有市場資深的實務經驗，為您提供惡意程式檢測服務、事故調查、滲透測試服務、紅隊演練服務及弱點掃描服務，保障企業的資訊安全。
+                      <p id="cooperationGalleryItemText1">
+                        為保障您的辦公室環境及設備安全，不論是事前預防或事後調查，我們提供專業的檢測調查與顧問服務。<br>LeaSecurity團隊擁有市場資深的實務經驗，為您提供惡意程式檢測服務、事故調查、滲透測試服務、紅隊演練服務及弱點掃描服務，保障企業的資訊安全。
                       </p>
                     </div>
                   </div>
@@ -314,11 +314,13 @@
                   <div class="galleryCooperationItem">
                     <div class="galleryCooperationTitleItemContent linegradientPink">
                       <img src="assets/img/cooperation/number3.png" alt="" loading="lazy">
-                      <h2 class="title">企業辦公</h5>
+                      <h2 class="title" id="cooperationGalleryItemTitle2">企業遠端辦公</h5>
                     </div>
                     <div class="galleryCooperationItemContent paddingTopRight">
                       <i class="fas fa-quote-left fontPink"></i>
-                      <p>為企業的行動辦公需求而生。LeaProtect、居家辦公以及LeaDesk，三線三護打造企業辦公最前道防線，保障貼身手機、電腦及伺服器安全隱蔽，打造員工個人化環境，不需擔心企業資料和行動位置洩漏。
+                      <p id="cooperationGalleryItemText2">
+                        為企業的行動辦公需求而生。<br>&emsp;&emsp;
+                        LeaProtect、居家辦公以及LeaDesk，三線三護打造企業辦公最前道防線，保障貼身手機、電腦及伺服器安全隱蔽，打造員工個人化環境，不需擔心企業資料和行動位置洩漏。<br>&emsp;&emsp;
                         還可透過LeaExpress快捷送達您的貨品，降低運送的負擔和風險。
                       </p>
                     </div>
@@ -397,10 +399,10 @@
           <div class="description col-lg-6">
             <div class="sectionTitleDiv">
               <div class="sectionTitle">LEACLOUD</div>
-              <h1 class="sectionSubTitle">提供全球化專業節點</h1>
+              <h1 class="sectionSubTitle" id="globeSectionSubTitle">提供全球化專業節點</h1>
               <hr/>
             </div>
-            <p>
+            <p id="globeSectionSubText">
               LeaCloudCDN在中國大陸多個省份城市、台灣、日本、南韓、香港、菲律賓、越南、泰國、新加坡、印尼、馬來西亞、印度、歐洲、北美等<br>均有專屬節點及專線，讓您的網站及各項服務暢行無阻。
             </p>
           </div>
@@ -420,11 +422,11 @@
         <div class="container" data-aos="fade-up">
           <div class="sectionTitleDiv">
             <div class="sectionTitle">LEACLOUD</div>
-            <h1 class="sectionSubTitle">選擇適合您的方案</h1>
+            <h1 class="sectionSubTitle" id="pricingSectionSubTitle">選擇適合您的方案</h1>
             <hr>
           </div>
-          <p>您可依據您事業的需求，選擇適合您的方案。若有其他需求，請洽客服。</p>
-          <div class="row gy-4 pricingItemGroup" data-aos="fade-left">
+          <p  id="pricingSectionSubText">您可依據您事業的需求，選擇適合您的方案。若有其他需求，請洽客服。</p>
+          <!-- <div class="row gy-4 pricingItemGroup" data-aos="fade-left">
             <div class="col-lg-4 col-md-6 pricingBoxCotent" data-aos="zoom-in" data-aos-delay="100">
               <div class="box">
                 <span class="featured"><i class="fas fa-star star"></i></span>
@@ -478,8 +480,8 @@
                 <a href="#" class="btn-buy">搶先訂購</a>
               </div>
             </div>
-          </div>
-          <a href="#" class="helpButton">需要協助?</a>
+          </div> -->
+          <a href="#" class="helpButton" id="helpButton">需要協助?</a>
         </div>
       </section>
       
