Adjust font to Lato

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
             <h1 class="bannerContentTitle" id="bannerTitle"></h1>
             <h2 class="bannerContentSubTitle" id="bannerSubtitle"></h2>
             <div class="bannerContentText">
-              <div id="bannerContentText"></div>
+              <div id="bannerContentSubText"></div>
               <!-- <svg width="100px" height="80px" viewbox="0 0 400 400">
                 <path stroke="#000" stroke-width="30" fill="none" 
                       d="M100 350 A 100 100 0 0 1 200 150
                         M200 150 200 125 225 150 200 175Z"/>
               </svg> -->
-              <img src="assets/img/dotLineArrow.png" alt="" class="dotLineArrow" loading="lazy">
+              <!-- <img src="assets/img/dotLineArrow.png" alt="" class="dotLineArrow" loading="lazy"> -->
               <!-- <a href="#">
                 <span class="right"></span>
               </a> -->
@@ -137,7 +137,7 @@
         <div class="container">
           <div class="sectionTitleDiv">
             <div class="sectionTitle">LEACLOUD</div>
-            <h1 id="featuresSubTitle" class="sectionSubTitle">關於LeaCloud力雲</h1>
+            <h1 id="featuresSubTitle" class="sectionSubTitle"></h1>
             <hr>
           </div>
           <p id="featuresContentText">
