Adjust banner trybutton

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1 class="bannerContentTitle" id="bannerTitle"></h1>
             <h2 class="bannerContentSubTitle" id="bannerSubtitle"></h2>
             <div class="bannerContentText">
-              <div id="bannerContentSubText"></div>
+              <a href="/signup"><div id="bannerContentSubText"></div></a>
               <!-- <svg width="100px" height="80px" viewbox="0 0 400 400">
                 <path stroke="#000" stroke-width="30" fill="none" 
                       d="M100 350 A 100 100 0 0 1 200 150
