Adjust pricing section

--- a/index.html
+++ b/index.html
@@ -418,14 +418,27 @@
         </g>
       </svg>
 
-      <section id="pricing" class="pricing">
+      <section id="pricing" class="pricing" style="background-color: darkseagreen;">
         <div class="container" data-aos="fade-up">
-          <div class="sectionTitleDiv">
+          <!-- <div class="sectionTitleDiv">
             <div class="sectionTitle">LEACLOUD</div>
             <h1 class="sectionSubTitle" id="pricingSectionSubTitle">選擇適合您的方案</h1>
             <hr>
           </div>
-          <p  id="pricingSectionSubText">您可依據您事業的需求，選擇適合您的方案。若有其他需求，請洽客服。</p>
+          <p  id="pricingSectionSubText">您可依據您事業的需求，選擇適合您的方案。若有其他需求，請洽客服。</p> -->
+          <div class="row pricingContentRow">
+            <div class="col-lg-6 pricingSubContentColumn">
+              <h1 class="pricingContentTitle" id="pricingContentTitle">立即加入LeaCloud</h1>
+              <h2 class="pricingContentSubTitle" id="pricingContentSubTitle">更多服務優惠開始使用</h2>
+              <div class="detailButtons">
+                <div class="detailButton" id="contactCustomService">聯繫客服</div>
+                <div class="detailButton" id="firstApply">搶先註冊</div>
+              </div>
+            </div>
+            <div class="col-lg-6 pricingSubContentColumn1">
+              <img src="assets/img/world1.jpg" loading="lazy">
+            </div>
+          </div>
           <!-- <div class="row gy-4 pricingItemGroup" data-aos="fade-left">
             <div class="col-lg-4 col-md-6 pricingBoxCotent" data-aos="zoom-in" data-aos-delay="100">
               <div class="box">
@@ -481,7 +494,7 @@
               </div>
             </div>
           </div> -->
-          <a href="#" class="helpButton" id="helpButton">需要協助?</a>
+          <!-- <a href="#" class="helpButton" id="helpButton">需要協助?</a> -->
         </div>
       </section>
       
