Adjust pricing section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <div class="triangle"></div>
                   <!-- <li><a href="#" onclick="changeLng('en')">EN</a></li> -->
                   <li><a href="#" onclick="changeLng('tw')">繁體中文</a></li>
-                  <li><a href="#" onclick="changeLng('sc')">簡體中文</a></li>
+                  <li><a href="#" onclick="changeLng('sc')">简体中文</a></li>
                 </ul>
               </li>
               <li class="headerList-li"><a href="#contact" id="contactUs">聯繫我們</a></li>
@@ -418,8 +418,8 @@
         </g>
       </svg>
 
-      <section id="pricing" class="pricing" style="background-color: darkseagreen;">
-        <div class="container" data-aos="fade-up">
+      <section id="pricing" class="pricing">
+        <div class="container">
           <!-- <div class="sectionTitleDiv">
             <div class="sectionTitle">LEACLOUD</div>
             <h1 class="sectionSubTitle" id="pricingSectionSubTitle">選擇適合您的方案</h1>
@@ -428,15 +428,20 @@
           <p  id="pricingSectionSubText">您可依據您事業的需求，選擇適合您的方案。若有其他需求，請洽客服。</p> -->
           <div class="row pricingContentRow">
             <div class="col-lg-6 pricingSubContentColumn">
-              <h1 class="pricingContentTitle" id="pricingContentTitle">立即加入LeaCloud</h1>
-              <h2 class="pricingContentSubTitle" id="pricingContentSubTitle">更多服務優惠開始使用</h2>
+              <h1 class="pricingContentTitle" id="pricingContentTitle"></h1>
+              <h2 class="pricingContentSubTitle" id="pricingContentSubTitle"></h2>
               <div class="detailButtons">
-                <div class="detailButton" id="contactCustomService">聯繫客服</div>
-                <div class="detailButton" id="firstApply">搶先註冊</div>
+                <div class="detailButton" id="trynow"></div>
+                <div class="detailButton" id="contactCustomService"></div>
               </div>
             </div>
             <div class="col-lg-6 pricingSubContentColumn1">
-              <img src="assets/img/world1.jpg" loading="lazy">
+              <img id="pricingSubColumn1Img" src="assets/img/pricing/pricingRightMapTW.png" loading="lazy">
+              <div class="sectionTitleDiv">
+                <div class="sectionTitle">LEACLOUD</div>
+                <h1 class="sectionSubTitle" id="pricingImgContentSubTitle"></h1>
+                <hr>
+              </div>
             </div>
           </div>
           <!-- <div class="row gy-4 pricingItemGroup" data-aos="fade-left">
