Adjust pricing section button

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <section id="banner">
         <div class="bannerContainer">
           <div class="bannerContent">
-            <h1 class="bannerContentTitle" id="bannerTitle"></h1>
-            <h2 class="bannerContentSubTitle" id="bannerSubtitle"></h2>
+            <h1 class="bannerContentTitle" id="bannerTitle">網路無遠弗屆</h1>
+            <h2 class="bannerContentSubTitle" id="bannerSubtitle">LeaCloud拉近您與世界的距離</h2>
             <div class="bannerContentText">
               <a href="/signup"><div id="bannerContentSubText"></div></a>
               <!-- <svg width="100px" height="80px" viewbox="0 0 400 400">
@@ -431,8 +431,8 @@
               <h1 class="pricingContentTitle" id="pricingContentTitle"></h1>
               <h2 class="pricingContentSubTitle" id="pricingContentSubTitle"></h2>
               <div class="detailButtons">
-                <div class="detailButton" id="trynow"></div>
-                <div class="detailButton" id="contactCustomService"></div>
+                <a href="/signup" id="trynow" class="detailButton"></a>
+                <a href="#" id="contactCustomService" class="detailButton"></a>
               </div>
             </div>
             <div class="col-lg-6 pricingSubContentColumn1">
