Adjust globe section

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
               <h2 class="pricingContentSubTitle" id="pricingContentSubTitle"></h2>
               <div class="detailButtons">
                 <a href="/signup" id="trynow" class="detailButton"></a>
-                <a href="#" id="contactCustomService" class="detailButton"></a>
+                <a href="https://telegram.me/leacloud" target="_blank" id="contactCustomService" class="detailButton"></a>
               </div>
             </div>
             <div class="col-lg-6 pricingSubContentColumn1">
