Adjust contact mail send

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
             <div class="col-lg-1 mt-4 vhr"></div>
             <div class="col-lg-4 mt-4 mt-lg-0 contactInputs" data-aos="fade-left">
               <h2 class="contactInputsTitle" id="contactInputsTitle">留下寶貴意見</h2>
-              <form action="mailto:sales@leacloud.com" method="post" role="form" class="php-email-form" enctype="text/plain">
+              <form role="form" class="php-email-form" enctype="text/plain" accept-charset="utf-8">
                 <div class="form-group mt-3">
                   <input type="text" class="form-control" required name="name" id="contactFormName" placeholder="名字" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                   <i class="far fa-user "></i>
@@ -553,7 +553,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
                 </div>
-                <div class=""><button type="submit" id="contactSubmit">送出</button></div>
+                <a href="" id="contactSubmit" target="_blank">送出</a>
               </form>
             </div>
           </div>
