Adjust mail and meta and globe description

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Leacloud打通你我距離</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <title>LeaCloud打通你我距離</title>
+    <meta name="description" content="LeaCloud 致力於打造全球 CDN 互聯網加速系統，其中包含中國境內互聯網。我們能為您提供智能 CDN 加速服務、DDoS 攻擊防禦，並且幫助您快速切換至更安全更可靠的互聯網服務系統。">
+    <meta name="keywords" content="CDN,DNS">
+    <meta name="title" content="LeaCloud">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -367,7 +368,7 @@
       <section class="globe">
         <div class="container" id="globe-container">
           <!-- <div id="globeSection" class="col-lg-6"></div> -->
-          <div class="col-lg-5 globeDotsSection">
+          <div class="col-lg-6 globeDotsSection">
             <div class="globeDots js-globe">
               <!-- <div class="svg-wrapper">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -396,7 +397,7 @@
               <canvas class="globe-canvas js-canvas"></canvas>
             </div>
           </div>
-          <div class="description col-lg-7">
+          <div class="description col-lg-6">
             <div class="sectionTitleDiv">
               <div class="sectionTitle">LEACLOUD</div>
               <h1 class="sectionSubTitle" id="globeSectionSubTitle">提供全球化專業節點</h1>
