Adjust header scroll

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
             <hr class="contactInfo" />
             <h4 id="footerSubTitle3">聯絡我們</h4>
             <!-- <div class="a-Interval"><a href="https://telegram.me/leacloud" target="_blank">Telegram</a></div> -->
-            <div class="a-Interval"><a href="#">+886 966-625-710</a></div>
+            <div class="a-Interval"><a href="#">+886 966625710</a></div>
             <div class="a-Interval"><a href="mailto:sales@leacloud.com">sales@leacloud.com</a></div>
             <div>
               <a href="https://telegram.me/leacloud" target="_blank"><i class="fab fa-telegram-plane"></i></a>
