Adjsut footer button

--- a/index.html
+++ b/index.html
@@ -578,8 +578,8 @@
           <div class="col-lg-2 col-md-12 interval">
             <hr class="helpCenter" />
             <h4 id="footerSubTitle1">幫助中心</h4>
-            <div class="a-Interval"><a href="#" id="footerSubItem3">聯繫客服</a></div>
-            <div class="a-Interval"><a href="#signup" id="footerSubItem4">創建帳戶</a></div>
+            <div class="a-Interval"><a href="https://telegram.me/leacloud" id="footerSubItem3">聯繫客服</a></div>
+            <div class="a-Interval"><a href="/signup" id="footerSubItem4">創建帳戶</a></div>
             <!-- <div class="a-Interval"><a href="#">常見問題</a></div> -->
           </div>
 
