Adjust contact service button

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 </div>
                 <div class="item">
                   <i class="fas fa-headset"></i>
-                  <p id="contactOnLineServiceText">線上客服</p>
+                  <a href="https://telegram.me/leacloud" target="_blank" id="contactOnLineServiceText">線上客服</a>
                 </div>
               </div>
             </div>
@@ -578,7 +578,7 @@
           <div class="col-lg-2 col-md-12 interval">
             <hr class="helpCenter" />
             <h4 id="footerSubTitle1">幫助中心</h4>
-            <div class="a-Interval"><a href="https://telegram.me/leacloud" id="footerSubItem3">聯繫客服</a></div>
+            <div class="a-Interval"><a href="https://telegram.me/leacloud" target="_blank" id="footerSubItem3">聯繫客服</a></div>
             <div class="a-Interval"><a href="/signup" id="footerSubItem4">創建帳戶</a></div>
             <!-- <div class="a-Interval"><a href="#">常見問題</a></div> -->
           </div>
