--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <li class="headerList-li"><a href="#contact" id="contactUs">聯繫我們</a></li>
             </ul>
           </nav>
-          <img class="navMenuImg" src="assets/img/headerList.png" alt="" loading="lazy">
+          <!-- <img class="navMenuImg" src="assets/img/headerList.png" alt="" loading="lazy"> -->
         </div>
       </div>
     </header>
@@ -74,10 +74,13 @@
             
             <div class="search-container">
               <div class="search-box">
-                 <input type="text" class="search-input" placeholder="尋找屬於您的完美域名">
+                 <input id="searchInput" type="text" class="search-input" placeholder="尋找屬於您的完美域名">
            
                  <button class="search-button">
-                    <a href="/domainNameBuy">
+                    <!-- <nuxt-link to="/domainNameBuy">
+                      <i class="fas fa-search searchIcon"></i>
+                    </nuxt-link> -->
+                    <a id="searchDomainName">
                       <i class="fas fa-search searchIcon"></i>
                     </a>
                  </button>
@@ -584,7 +587,7 @@
           <div class="col-lg-2 col-md-12 interval">
             <hr class="aboutUs" />
             <h4 id="footerSubTitle">關於力雲</h4>
-            <div class="a-Interval"><a href="team.html" id="footerSubItem">力雲團隊</a></div>
+            <div class="a-Interval"><a href="#" id="footerSubItem">力雲團隊</a></div>
             <div class="a-Interval"><a href="#features" id="footerSubItem1">公司沿革</a></div>
             <div class="a-Interval"><a href="#contact" id="footerSubItem2">公司資訊</a></div>
           </div>
